feat: align Emergency Support styling with primary brand palette

--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/images/logo.png" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>nithin</title>
+    <meta name="description" content="AairaAssist - Your trusted partner for comprehensive assistance services. Professional support for personal, document, communication, and security needs." />
+    <meta name="keywords" content="assistance services, personal support, document services, communication support, UAE, Dubai" />
+    <title>AairaAssist - Professional Assistance Services</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -13,11 +15,7 @@
     />
   </head>
   <body>
-    <div id="root">
-      <div style="text-align: center; padding: 2rem;">
-        <h1>Loading...</h1>
-      </div>
-    </div>
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html> 
