--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="AairaAssist - Your trusted partner for comprehensive assistance services. Professional support for personal, document, communication, and security needs." />
-    <meta name="keywords" content="assistance services, personal support, document services, communication support, UAE, Dubai" />
-    <title>AairaAssist - Professional Assistance Services</title>
+    <meta name="description" content="AairaAssist - Your trusted financial partner in Dubai. Expert banking, investment advisory, and financial solutions for individuals and businesses." />
+    <meta name="keywords" content="financial advisory, banking services, investment planning, personal loans, business loans, mortgage, Dubai, UAE" />
+    <title>AairaAssist - Financial Advisory & Banking Services</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
